Fix text align for menu items.

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -71,7 +71,6 @@ h2 {
   }
   #nav-list a {
     color: #212700;
-    text-align: center;
     font-size: 1.8em;
     padding: 20px 0;
     border-bottom: 1px solid #212700;
